--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /Lap3/nbproject/private/
 /Lab2/nbproject/private/
 /Lab2/build/
+/Lab3MapDesign/nbproject/private/
+/Lab3MapDesign/build/
+/Lab3 MapDesign/nbproject/private/
+/Lab3 MapDesign/build/
